# ledger-tezos

./: .gitignore  .gitmodules  BETA.md  Makefile  README.md
.circleci/: config.yml
.github/workflows/: check_version.yml  main.yaml  publish.yaml  publish_release.yaml  rust_audit.yaml  rust_periodic_audit.yaml
app/: Cargo.toml  Makefile
app/c/: main.c
app/refactor/: actions.h  addr.c  apdu_codes.h  app_main.c  crypto.h  parser.h  tx.c
app/src/: constants.rs  dispatcher.rs  lib.rs  utils.rs
app/src/bolos/: buffer.rs  mod.rs  nvm.rs  pic.rs  swapping_buffer.rs
app/src/handlers/: dev.rs  legacy_version.rs  mod.rs  version.rs
docs/: APDUSPEC.md
js/: README.md  package.json
js/src/: common.ts  helper.ts  index.ts  types.ts
rust/: Cargo.toml  FUZZING.md  Makefile
rust/app/: Cargo.toml  Makefile  Makefile.version  Tezos.md  clippy.toml
rust/app-derive/: Cargo.toml
rust/app-derive/src/: lib.rs  unroll.rs
rust/app-derive/tests/: unroll.rs  unroll.rs.expanded  version.rs
rust/app/.cargo/: config
rust/app/c/: .clangd  main.c  rslib.h  utils.c
rust/app/refactor/: actions.h  apdu_codes.h  apdu_handler.c  app_main.c  app_main.h  coin.h  crypto.c  dockerized_build.mk  parser.c  parser_txdef.h  template.sh  tx.c  tx.h  view.c  view.h  view_internal.h  view_s.c  view_x.c  zxmacros.c  zxmacros.h  zxmacros_ledger.h
rust/app/src/: constants.rs  crypto.rs  dispatcher.rs  lib.rs  parser.rs  utils.rs
rust/app/src/handlers/: baking.rs  dev.rs  hwm.rs  legacy.rs  legacy_public_key.rs  legacy_sign.rs  legacy_version.rs  lock.rs  mod.rs  parser_common.rs  public_key.rs  signing.rs  utils.rs  version.rs
rust/app/src/handlers/baking/: authorization.rs  hmac.rs  queryauth.rs
rust/app/src/handlers/dev/: blind_sign.rs  debug.rs  echo.rs  exception.rs  sha256.rs
rust/app/src/handlers/legacy/: baking.rs  hmac.rs  hwm.rs  public_key.rs  signing.rs  version.rs
rust/app/src/handlers/legacy/baking/: setup.rs
rust/app/src/parser/: baking.rs  integration_tests.rs  operations.rs
rust/app/src/parser/baking/: emmy.rs  tenderbake.rs
rust/app/src/parser/operations/: activate_account.rs  ballot.rs  delegation.rs  double_baking_evidence.rs  endorsement.rs  failing_noop.rs  operation_type.rs  origination.rs  proposals.rs  reveal.rs  seed_nonce_revelation.rs  transfer.rs
rust/app/src/sys/: mod.rs
rust/app/src/utils/: apdu_wrapper.rs  buffer_upload.rs
rust/app/tests/: apdu.rs  baking.rs  baking_prelude.rs  prelude.rs  public_key.rs
rust/bolos/: Cargo.toml  build.rs
rust/bolos-common/: Cargo.toml
rust/bolos-common/src/: bip32.rs  lib.rs
rust/bolos-derive/: Cargo.toml  build.rs
rust/bolos-derive/src/: lazy_static.rs  lib.rs  nvm.rs  pic_str.rs
rust/bolos-derive/tests/: lazy_static.rs  macros.rs  nvm.rs  pic.rs  pic_str.rs
rust/bolos-impl/: Cargo.toml  build.rs
rust/bolos-impl/src/: crypto.rs  errors.rs  hash.rs  hmac.rs  lib.rs  misc.rs  nvm.rs  pic.rs
rust/bolos-impl/src/crypto/: ecfp256.rs
rust/bolos-impl/src/errors/: exceptionsS.rs  exceptionsSP.rs  exceptionsSTUB.rs  exceptionsX.rs
rust/bolos-impl/src/hash/: blake2b.rs  sha256.rs  sha512.rs
rust/bolos-impl/src/hmac/: sha256.rs
rust/bolos-mock/: Cargo.toml  build.rs
rust/bolos-mock/src/: crypto.rs  errors.rs  hash.rs  hmac.rs  lib.rs  nvm.rs  pic.rs
rust/bolos-mock/src/crypto/: ecfp256.rs
rust/bolos-mock/src/hash/: blake2b.rs  sha256.rs  sha512.rs
rust/bolos-mock/src/hmac/: sha256.rs
rust/bolos-sys/: Cargo.toml  build.rs
rust/bolos-sys/bindgen/: defs.h  wrapperS.h  wrapperSP.h
rust/bolos-sys/src/: extra_traits.rs  lib.rs  pic.rs
rust/bolos-sys/src/bindings/: bindingsS.rs  bindingsSP.rs  bindingsX.rs
rust/bolos/bindgen/: defs.h  wrapper.h  wrapperS.h  wrapperX.h
rust/bolos/src/: crypto.rs  errors.rs  exceptions.rs  flash_slot.rs  hash.rs  lazy.rs  lib.rs  nvm.rs  pic.rs  swapping_buffer.rs  wear_leveller.rs
rust/bolos/src/bindings/: bindingsS.rs  bindingsX.rs
rust/bolos/src/crypto/: bip32.rs  ecfp256.rs
rust/bolos/src/errors/: exceptionsS.rs
rust/bolos/src/exceptions/: bindings.rs
rust/bolos/src/hash/: blake2b.rs  sha256.rs
rust/hfuzz-parser/: Cargo.toml  apdu.rs  operations.rs
rust/hfuzz-parser/scripts/: gen_operations_corpus.js
rust/zemu/: Cargo.toml  build.rs  cbindgen.toml  cbindgen_s.toml  cbindgen_sp.toml  cbindgen_x.toml
rust/zemu/include/: zemu_ui.h  zemu_ui_s.h  zemu_ui_sp.h  zemu_ui_x.h
rust/zemu/src/: lib.rs  ui.rs  ui_mock.rs  ui_toolkit.rs  zemu_logger.rs
rust/zemu/src/ui/: bindings.rs  bindings_stub.rs  comm.rs  manual_vtable.rs
rust/zemu/src/ui_toolkit/: backends.rs
rust/zemu/src/ui_toolkit/backends/: console.rs  nanos.rs  nanosplus.rs  nanox.rs
rust/zuit/: Cargo.toml
rust/zuit/src/: lib.rs
zemu/: globalsetup.ts  globalteardown.ts  jest.config.js  package.json  try.mjs  tsconfig.json
zemu/debug/: debug.mjs
zemu/jest/: globalsetup.ts  globalteardown.ts
zemu/test-vectors/: activation.json  ballot.json  delegation.json  endorsement.json  legacy.json  origination.json  proposals.json  reveal.json  seed.json
zemu/test-vectors-gen/: activate_account.ts  ballot.ts  common.ts  delegation.ts  endorsement.ts  index.ts  legacy.ts  origination.ts  proposals.ts  reveal.ts  seed_nonce_revelation.ts  simple.ts
zemu/tests/: baking.test.ts  baking_utils.ts  common.ts  dev.test.ts  dev.ts  globalsetup.ts  legacy.baking.test.ts  legacy.standard.test.ts  legacy.wallet.test.ts  standard.test.ts  test.ts  testvectors.test.ts  tezos.ts  wallet.test.ts
zemu/tests/data/: michelson.json  samples.json
