[workspace]
members = [
    "app", "app-derive",
    "bolos", "bolos-sys", "bolos-impl", "bolos-mock", "bolos-common", "bolos-derive",
    "zemu", "zuit",
]

exclude = ["hfuzz-parser"]

resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
lto = false
codegen-units = 1
debug = true
opt-level = "z"
