[package]
authors = ["Zondax GmbH <info@zondax.ch>"]
name = "rslib"
version = "0.1.0"
edition = "2018"
readme = "README.md"

[lib]
name = "rslib"
crate-type = ["staticlib"]

[features]
baking = ["bolos/wear"]
wallet = []
dev = ["sha2"]
default = []

[dependencies]
bolos = { path = "../bolos" }
zemu-sys = { path = "../zemu" }

no-std-compat = { version = "0.4" }
cfg-if = "1.0.0"
git-testament = { version = "0.2", default-features = false }

arrayvec = { version = "0.5.1", default-features = false }
zeroize = { version = "1", default-features = false }
nom = { version = "6.1.2", default-features = false }
bs58 = { version = "0.4.0", default-features = false }

#dev
sha2 = { version = "0.9", default-features = false, optional = true }

[target.thumbv6m-none-eabi.dev-dependencies]
panic-halt = "0.2.0"

[dev-dependencies]
no-std-compat = { version = "0.4", features = ["std"] }
serial_test = "0.5"
hex = "0.4.3"

[profile.release]
lto = false
codegen-units = 1
debug = true
opt-level = "s"

[profile.dev]
panic = "abort"
