[package]
authors = ["Zondax GmbH <hello@zondax.ch>"]
name = "rslib"
version = "0.1.0"
edition = "2018"
readme = "README.md"

[lib]
name = "rslib"
crate-type = ["staticlib"]

[features]
baking = ["bolos/flash-slot"]
wallet = []
dev = []
default = []

[dependencies]
bolos = { path = "../bolos" }
zemu-sys = { path = "../zemu" }

no-std-compat = { version = "0.4" }
cfg-if = "1.0.0"
git-testament = { version = "0.2", default-features = false }

arrayvec = { version = "0.7", default-features = false }
zeroize = { version = "1", default-features = false }
nom = { version = "6.2.1", default-features = false }
bs58 = { version = "0.4.0", default-features = false }
hex = { version = "0.4", default-features = false }
arrayref = { version = "0.3.6" }
property = "0.3.3"
lexical-core = { version = "0.7", features = ["libm"], default-features = false }
bytemuck = { version = "1" }

[target.thumbv6m-none-eabi.dev-dependencies]
panic-halt = "0.2.0"

[dev-dependencies]
sha2 = { version = "0.9" }
no-std-compat = { version = "0.4", features = ["std"] }
bs58 = { version = "0.4.0", features = ["check"] }
serial_test = "0.5"
hex = "0.4.3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
