[package]
name = "bolos-common"
version = "0.1.0"
authors = ["Zondax <support.tezos@zondax.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
std = ["no-std-compat/std", "derive-debug"]
derive-debug = []

[dependencies]
no-std-compat = { version = "0.4", default-features = false }

[dev-dependencies]
no-std-compat = { version = "0.4", features = ["std"] }
