[package]
name = "bolos-derive"
version = "0.1.0"
authors = ["Zondax <support.tezos@zondax.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1"

[dev-dependencies]
bolos = { path = "../bolos" }
