[package]
name = "bolos-impl"
version = "0.1.0"
authors = ["Zondax <support.tezos@zondax.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[dependencies]
bolos-common = { version = "0.1", path = "../bolos-common" }
bolos-sys = { version = "0.1", path = "../bolos-sys" }
zemu-sys = { version = "0.1", path = "../zemu" }

cfg-if = "1.0.0"
no-std-compat = { version = "0.4" }

zeroize = { version = "1", default-features = false }

[dev-dependencies]
bolos = { version = "0.1", path = "../bolos" }
