[package]
name = "bolos-mock"
version = "0.1.0"
authors = ["becominginsane <francesco@zondax.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
bolos-common = { version = "0.1", path = "../bolos-common" }

sha2 = "0.9"
blake2 = "0.9"

cfg-if = "1"

[dev-dependencies]
bolos = { version = "0.1", path = "../bolos" }
