[package]
name = "bolos-sys"
version = "0.1.0"
authors = ["becominginsane <francesco@zondax.ch>"]
edition = "2018"

[features]
exception-throw = []
wear = ["crc"]

[dependencies]
cty = "0.2"
bolos-derive = { version = "0.1", path = "../bolos-derive" }

cfg-if = "1.0.0"
no-std-compat = { version = "0.4" }

#wear levelling
crc = { version = "1.8.1", optional = true, default-features = false }
