[package]
name = "bolos-sys"
version = "0.1.0"
authors = ["becominginsane <francesco@zondax.ch>"]
edition = "2018"

[features]
default = ["lazy"]

exception-throw = []
lazy = ["once_cell"]

[dependencies]
cty = "0.2"
bolos-derive = { version = "0.1", path = "../bolos-derive" }

cfg-if = "1.0.0"
no-std-compat = { version = "0.4" }

once_cell = { version = "1", default-features = false, optional = true }
