[package]
name = "bolos"
version = "0.1.0"
authors = ["Zondax <support.tezos@zondax.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
flash-slot = ["crc"]
derive-debug = []

[dependencies]
cfg-if = "1.0.0"
bolos-derive = { version = "0.1", path = "../bolos-derive" }

no-std-compat = { version = "0.4" }

#wear levelling
crc = { version = "1.8.1", optional = true, default-features = false }

[target.thumbv6m-none-eabi.dependencies]
bolos-impl = { version = "0.1", path = "../bolos-impl" }

[target.'cfg(any(unix, windows))'.dependencies]
bolos-mock = { version = "0.1", path = "../bolos-mock" }
