[package]
authors = ["Zondax <info@zondax.ch>"]
edition = "2018"
name = "hfuzz-parser"
publish = false
version = "0.0.1"

[dependencies]
honggfuzz = "0.5"
tezos-app = { default-features = false, path = "../app" }

[features]
baking = ["tezos-app/baking"]
wallet = ["tezos-app/wallet"]


[[bin]]
name = "operations"
path = "operations.rs"
