[package]
name = "zemu-sys"
version = "0.1.0"
authors = ["becominginsane <francesco@zondax.ch>"]
edition = "2018"

[features]
cbindgen_s = []
cbindgen_x = []

[dependencies]
bolos-sys = { version = "0.1", path = "../bolos-sys" }
bolos-derive = { version = "0.1", path = "../bolos-derive" }

cfg-if = "1.0.0"
cty = "0.2.1"

arrayvec = { version = "0.7", default-features = false }
itoa = { version = "0.4", default-features = false }
